// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a JSON input 1`] = `
<div>
  <div
    class="sc-kLhKbu iCmsqj"
  >
    <vscode-label
      id="vscode-label-3"
    >
      myJsonParam
    </vscode-label>
    <vscode-textarea
      class="code-textarea-container"
    />
  </div>
</div>
`;

exports[`renders a bool input 1`] = `
<div>
  <div
    class="sc-kLhKbu iCmsqj"
  >
    <vscode-checkbox>
      myBoolParam
    </vscode-checkbox>
  </div>
</div>
`;

exports[`renders a string input 1`] = `
<div>
  <div
    class="sc-kLhKbu iCmsqj"
  >
    <vscode-label
      id="vscode-label-1"
    >
      myStringParam
    </vscode-label>
    <vscode-textfield />
  </div>
</div>
`;

exports[`renders an integer input 1`] = `
<div>
  <div
    class="sc-kLhKbu iCmsqj"
  >
    <vscode-label
      id="vscode-label-2"
    >
      myIntParam
    </vscode-label>
    <vscode-textfield />
  </div>
</div>
`;
